metadata-retriever/metadata/objects/Customer_Vehicle_Relationship__c.object
<CustomObject>
    <fields>
        <fullName>Previous_Year__c</fullName>
        <label>Previous Year</label>
        <picklist>
            <picklistValues>
                <fullName>&lt;1980</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1981</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1982</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1983</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1984</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1985</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1986</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1987</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1988</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1989</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1990</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1991</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1992</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1993</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1994</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1995</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1996</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1997</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1998</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1999</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2001</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2002</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2003</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2004</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2005</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2006</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2007</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2008</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2009</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <description>Survey Information
What factors were influential in your purchase decision?
(Please rank from 1-5, with 1 being most important and 5 less important)</description>
        <inlineHelpText>What factors were influential in your purchase decision?
(Please rank from 1-5, with 1 being most important and 5 less important)</inlineHelpText>
        <label>Price</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Purchase_Date__c</fullName>
        <inlineHelpText>Purchase date of vehicle (information from leads, not from sales)</inlineHelpText>
        <label>Purchase Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Registration_Number__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>Licence plate number of vehicle</inlineHelpText>
        <label>Registration No.</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Relationship_Type__c</fullName>
        <label>Relationship Type</label>
        <picklist>
            <picklistValues>
                <fullName>Owner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Driver</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Replacement_Date__c</fullName>
        <description>Replacement_Date</description>
        <inlineHelpText>Replacement_Date</inlineHelpText>
        <label>Replacement Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Safety__c</fullName>
        <description>Survey Information
What factors were influential in your purchase decision?
(Please rank from 1-5, with 1 being most important and 5 less important)</description>
        <inlineHelpText>What factors were influential in your purchase decision?
(Please rank from 1-5, with 1 being most important and 5 less important)</inlineHelpText>
        <label>Safety</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sales_Person__c</fullName>
        <label>Sales Person</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_System__c</fullName>
        <label>Source System</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Starmarque__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Starmarque</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Currently Owned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Disposed - Previously Owned</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TV__c</fullName>
        <description>What factors were influential in your purchase decision?
(Please rank from 1-5, with 1 being most important and 5 less important)</description>
        <inlineHelpText>What factors were influential in your purchase decision?
(Please rank from 1-5, with 1 being most important and 5 less important)</inlineHelpText>
        <label>TV</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Technology__c</fullName>
        <description>Survey Infromation
What factors were influential in your purchase decision?
(Please rank from 1-5, with 1 being most important and 5 less important)</description>
        <inlineHelpText>What factors were influential in your purchase decision?
(Please rank from 1-5, with 1 being most important and 5 less important)</inlineHelpText>
        <label>Technology</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TradeIn_Make__c</fullName>
        <label>TradeIn Make</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TradeIn_Model__c</fullName>
        <label>TradeIn Model</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TradeIn_Year__c</fullName>
        <label>TradeIn Year</label>
        <picklist>
            <picklistValues>
                <fullName>&lt;1980</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1981</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1982</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1983</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1984</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1985</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1986</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1987</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1988</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1989</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1990</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1991</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1992</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1993</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1994</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1995</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1996</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1997</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1998</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1999</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2001</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2002</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2003</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2004</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2005</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2006</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2007</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2008</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2009</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TradeIn__c</fullName>
        <defaultValue>false</defaultValue>
        <description>signifies whether there is a trade in car involved</description>
        <label>TradeIn</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VIN_Search__c</fullName>
        <label>VIN</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VIN__c</fullName>
        <formula>Vehicle_ID__r.VIN__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>VIN</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vehicle_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vehicle ID</label>
        <referenceTo>Vehicle__c</referenceTo>
        <relationshipName>Vehicle_Relationships</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Warranty_Expiry__c</fullName>
        <description>Survey Information</description>
        <label>Warranty Expiry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Web_Auto__c</fullName>
        <description>What factors were influential in your purchase decision?
(Please rank from 1-5, with 1 being most important and 5 less important)</description>
        <inlineHelpText>What factors were influential in your purchase decision?
(Please rank from 1-5, with 1 being most important and 5 less important)</inlineHelpText>
        <label>Web Auto</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Web_MB__c</fullName>
        <description>What factors were influential in your purchase decision?
(Please rank from 1-5, with 1 being most important and 5 less important)</description>
        <inlineHelpText>What factors were influential in your purchase decision?
(Please rank from 1-5, with 1 being most important and 5 less important)</inlineHelpText>
        <label>Web MB</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Word_Mouth__c</fullName>
        <description>What factors were influential in your purchase decision?
(Please rank from 1-5, with 1 being most important and 5 less important)</description>
        <inlineHelpText>What factors were influential in your purchase decision?
(Please rank from 1-5, with 1 being most important and 5 less important)</inlineHelpText>
        <label>Word/Mouth</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Customer Vehicle Relationship</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Vehicle_ID__c</columns>
        <columns>Registration_Number__c</columns>
        <columns>Customer__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>VR-{0000000000}</displayFormat>
        <label>VehicleRel No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Vehicle Relationship</pluralLabel>
    <recordTypes>
        <fullName>Company</fullName>
        <active>true</active>
        <label>Company</label>
    </recordTypes>
    <recordTypes>
        <fullName>Individual</fullName>
        <active>true</active>
        <label>Individual</label>
    </recordTypes>
    <recordTypes>
        <fullName>Lessee</fullName>
        <active>true</active>
        <label>Lessee</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>